--- a/EZAppMaker/PopUp/EZAlertView.xaml
+++ b/EZAppMaker/PopUp/EZAlertView.xaml
@@ -12,12 +12,14 @@
 
         <VerticalStackLayout StyleClass="EZVerticalStackStyle" VerticalOptions="Center">
 
-            <Frame Margin="25"
-                   Padding="10"
-                   CornerRadius="20"
-                   HasShadow="False"
-                   Background="{resource:BrushResource ezmodal_fill}"
-                   BorderColor="{resource:ColorResource ezmodal_border}">
+            <Border Margin="25"
+                    Padding="10"
+                    Background="{resource:BrushResource ezmodal_fill}"
+                    Stroke="{resource:ColorResource ezmodal_border}">
+
+                <Border.StrokeShape>
+                    <RoundRectangle CornerRadius="20"/>
+                </Border.StrokeShape>
 
                 <Grid StyleClass="EZGridStyle" VerticalOptions="Start" RowSpacing="5">
 
@@ -54,7 +56,7 @@
                                  Margin="0,5,0,0"/>
                 </Grid>
 
-            </Frame>
+            </Border>
 
         </VerticalStackLayout>
 
